--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^2.15.1",
+    "stripe": "^15.12.0",
     "tw-animate-css": "^1.4.0",
     "zod": "^3.24.2"
   },
